base/patch-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-grafana
  namespace: grafana
spec:
  replicas: 0
  revisionHistoryLimit: 0
