base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: grafana-rollout
spec:
  replicas: 2
  workloadRef: 
    apiVersion: apps/v1
    kind: Deployment
    name: demo-grafana
  strategy:
    blueGreen:
      activeService: demo-grafana
      previewService: demo-grafana-preview
      autoPromotionEnabled: false
