base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-grafana-preview
spec:
  ports:
    - name: service
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/instance: demo
    app.kubernetes.io/name: grafana
